--- a/src/app/shared/components/menu-list/menu-list.html
+++ b/src/app/shared/components/menu-list/menu-list.html
@@ -1,8 +1,8 @@
 <ul>
   <li
     *ngFor="let item of items$"
-    (click)="selectItem(item.id)"
-    [class.active]="item.id === activeItemId"
+    (click)="selectItem(item)"
+    [class.active]="item === activeItem"
   >
     {{ item.name }}
   </li>
