--- a/src/assets/css/_main.scss
+++ b/src/assets/css/_main.scss
@@ -1,12 +1,15 @@
 
 /*================================Template====================================*/
+.text-accent {
+  color: var(--theme-dark-blue);
+}
+
 .section__wrapper {
   background-color: var(--theme-light-blue);
   padding: 40px;
   border-radius: 20px;
 
   .text-accent {
-    color: var(--theme-dark-blue);
     margin-bottom: 16px;
   }
 }
