--- a/src/app/shared/components/footer/footer.component.scss
+++ b/src/app/shared/components/footer/footer.component.scss
@@ -1,11 +1,12 @@
 .footer {
     &__content {
-        display: flex;
-        justify-content: space-between;
-        background: var(--theme-blue);
-        min-height: 200px;
-        border-radius: 20px;
-        padding: 30px;
+      display: flex;
+      justify-content: space-between;
+      background: var(--theme-blue);
+      min-height: 200px;
+      border-radius: 20px;
+      padding: 30px;
+      margin-top: 32px;
 
         h2 {
             color: var(--theme-dark-blue);
