--- a/src/app/shared/components/menu-list/menu-list.scss
+++ b/src/app/shared/components/menu-list/menu-list.scss
@@ -21,7 +21,7 @@
       &:hover {
         //box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
         //background-color: var(--theme-accent-blue);
-        //color: var(--theme-main);
+        color: var(--theme-dark-blue);
       }
 
       &.active {
