--- a/src/app/cart/pages/cart-page/cart-page.component.scss
+++ b/src/app/cart/pages/cart-page/cart-page.component.scss
@@ -1,48 +1,65 @@
-:host {
-  max-width: 1200px;
-  display: block;
-  margin: 0 auto;
+.section__wrapper {
+  margin-top: 32px;
 
-  app-button  {
-    height: 100px;
-    padding: 0;
-
-    button {
-      height: 50px;
-      padding: 0;
-    }
-  }
-}
-
-.product-row {
-  color: black;
-  border-top: 1px solid var(--theme-dark-blue);
-  display: flex;
-  padding: 16px;
-  gap: 16px;
-
-  &__name {
-    flex: 1;
-  }
-  &__image {
-    max-width: 240px;
-    border-radius: 20px;
-  }
-
-  &_last {
-    border-bottom: 1px solid var(--theme-dark-blue);
-  }
-}
-
-.cart {
-  &__footer {
-    margin-top: 24px;
+  &__content {
     display: flex;
-    align-items: end;
-    justify-content: flex-end;
-    gap: 20px;
-    color: var(--theme-accent-blue);
+    gap: 32px;
 
+    .products__wrapper {
+      display: flex;
+      flex-direction: column;
+      row-gap: 32px;
+      width: 65%;
+
+      .product-item {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        padding: 20px;
+        gap: 32px;
+        background-color: var(--theme-blue);
+        color: var(--theme-dark-blue);
+        border-radius: 20px;
+        font-size: 20px;
+        font-weight: 500;
+
+        &__image {
+          max-width: 240px;
+          border-radius: 20px;
+        }
+
+        &__info {
+          display: flex;
+          flex-direction: column;
+          align-items: flex-start;
+          gap: 16px;
+          width: 100%;
+
+          &_controls {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            gap: 32px;
+            width: 100%;
+
+            &_delete-button {
+              display: flex;
+              align-items: center;
+              justify-content: center;
+              cursor: pointer;
+            }
+          }
+        }
+      }
+    }
+
+    .order-form {
+      display: flex;
+      flex-direction: column;
+      gap: 8px;
+      width: 35%;
+      color: var(--theme-accent-blue);
+    }
   }
 }
 
