--- a/src/app/shared/components/header/header.component.scss
+++ b/src/app/shared/components/header/header.component.scss
@@ -15,6 +15,7 @@
     padding: 8px 24px;
     background: var(--theme-blue);
     border-radius: 20px;
+    min-height: 60px;
 
     img {
       display: block;
