--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -15,7 +15,7 @@
               <div>
                 <svg width="20" height="21" stroke="#253B6E" fill="none"><use xlink:href="assets/icons/sprite.svg#icon-favourite"></use></svg>
                 <span class="header-counter">
-                0
+                {{ favouritesCount$ | async }}
               </span>
               </div>
               <span>Избранное</span>
