Добавил иконки в меню дашборда

--- a/src/app/dashboard/dashboard.component.scss
+++ b/src/app/dashboard/dashboard.component.scss
@@ -17,7 +17,7 @@
   flex-direction: column;
   width: 288px;
   background-color: var(--theme-blue);
-  color: var(--theme-black);
+  color: var(--theme-dark-blue);
   row-gap: 16px;
   padding: 16px;
   border-radius: 20px;
