--- a/src/app/shared/components/menu-list/menu-list.scss
+++ b/src/app/shared/components/menu-list/menu-list.scss
@@ -18,6 +18,10 @@
       transition: all .2s ease-in-out;
       min-height: 36px;
 
+      svg {
+        margin-right: 8px;
+      }
+
       &:hover {
         //box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
         //background-color: var(--theme-accent-blue);
@@ -27,6 +31,10 @@
       &.active {
         color: var(--theme-main);
         background-color: var(--theme-dark-blue);
+
+        svg {
+          fill: var(--theme-main);
+        }
       }
     }
   }
