--- a/src/app/dashboard/pages/order-history/order-history.component.html
+++ b/src/app/dashboard/pages/order-history/order-history.component.html
@@ -4,22 +4,26 @@
     <div *ngIf="orderHistory.length === 0">
       Вы ещё не сделали ни одного заказа
     </div>
-
-    <div *ngFor="let userOrder of orderHistory">
-
-      <h3>Дата заказа: {{ userOrder.orderDateTime | date : 'dd-MM-yyyy в hh:mm' }}</h3>
-      <h3>Ожидаемая дата доставки: {{ userOrder.expectedDate | date : 'dd-MM-yyyy в hh:mm' }}</h3>
-      <div>
-        Заказы:
+    <div class="user-order__wrapper">
+      <div class="user-order__item" *ngFor="let userOrder of orderHistory">
+        <h3>Дата заказа: {{ userOrder.orderDateTime | date : 'dd.MM.yyyy в H:mm' }}</h3>
+        <h3>Ожидаемая дата доставки: {{ userOrder.expectedDate | date : 'dd.MM.yyyy' }}</h3>
+        <div class="user-order__item__products">
+          <h3>Товары:</h3>
+          <div *ngFor="let productOrder of userOrder.productOrder" class="user-order__item__products__item">
+            <img src="{{ productOrder.product.imageUrl }}" alt="">
+            <div class="user-order__item__products__item_info">
+              <h3>{{ productOrder.product.name }}</h3>
+              <div class="user-order__item__products__item_info-description">
+                <h3>Цена: {{ productOrder.product.price }} ₽</h3>
+                <h3>Количество: {{ productOrder.countProduct }}</h3>
+                <h3>Стоимость: {{ productOrder.product.price * productOrder.countProduct }} ₽</h3>
+              </div>
+            </div>
+          </div>
+        </div>
+        <h3>На сумму: {{ userOrder.sum }} ₽</h3>
       </div>
-      <div *ngFor="let productOrder of userOrder.productOrder" class="product-order-row">
-        <img class="product-order-row__image" src="{{ productOrder.product.imageUrl }}" alt="">
-        <div>{{ productOrder.product.name }} за {{ productOrder.product.price }} ₽ в количестве {{ productOrder.countProduct }} ({{ productOrder.product.price * productOrder.countProduct }} ₽) </div>
-      </div>
-      <!--  <div *ngFor="let productOrder of userOrder.productOrder">-->
-      <!--    {{ productOrder.product | json }}-->
-      <!--  </div>-->
-      <div >На сумму {{ userOrder.sum }} ₽ </div>
     </div>
   </ng-container>
 </div>
