--- a/src/app/auth/pages/auth-page/auth-page.component.scss
+++ b/src/app/auth/pages/auth-page/auth-page.component.scss
@@ -1,19 +1,8 @@
 :host {
   display: block;
-  margin: 20px auto 0;
-  max-width: 1200px;
+  margin-top: 32px;
 }
-
-.form {
-  border-radius: 16px;
-  background-color: var(--theme-blue);
-  padding: 24px;
-  display: flex;
-  gap: 12px;
-  flex-direction: column;
-}
-
 
 .error-message {
-  color: red;
+  color: var(--theme-light-red);
 }
