--- a/src/app/dashboard/pages/order-history/order-history.component.scss
+++ b/src/app/dashboard/pages/order-history/order-history.component.scss
@@ -1,20 +1,62 @@
 :host {
-  color: black;
+  color: var(--theme-dark-blue);
 }
 
-.user-order-row {
-  margin-left: 12px;
-}
-
-.product-order-row {
-  margin-left: 24px;
+.user-order__wrapper {
   display: flex;
-  align-items: center;
-  gap: 32px;
-  margin-bottom: 24px;
+  flex-direction: column;
+  row-gap: 32px;
+}
 
-  &__image {
-    border-radius: 12px;
-    max-width: 240px;
+.user-order__item {
+  display: flex;
+  flex-direction: column;
+  background-color: var(--theme-blue);
+  padding: 20px;
+  border-radius: 20px;
+  gap: 8px;
+
+  h3 {
+    font-weight: 500;
+  }
+
+  > h3 {
+    &:last-of-type {
+      margin-left: auto;
+    }
+  }
+
+  &__products {
+    display: flex;
+    flex-direction: column;
+    row-gap: 16px;
+    margin-top: 8px;
+    margin-bottom: 8px;
+
+    &__item {
+      display: flex;
+      align-items: center;
+      gap: 16px;
+      border-bottom: 1px solid var(--theme-dark-blue);
+      padding-bottom: 16px;
+
+      &:first-of-type {
+        border-top: 1px solid var(--theme-dark-blue);
+        padding-top: 16px;
+      }
+
+      &_info {
+        display: flex;
+        flex-direction: column;
+        gap: 8px;
+        width: 100%;
+
+        &-description {
+          display: flex;
+          justify-content: space-between;
+          gap: 8px;
+        }
+      }
+    }
   }
 }
