--- a/src/app/dashboard/pages/user-orders/user-orders.component.scss
+++ b/src/app/dashboard/pages/user-orders/user-orders.component.scss
@@ -1,8 +1,70 @@
-:host{
-  display: block;
-  color: black;
+:host {
+  color: var(--theme-dark-blue);
 }
 
-.user-order-row {
+.user-order__wrapper {
+  display: flex;
+  flex-direction: column;
+  row-gap: 32px;
+}
 
+.user-order__item {
+  display: flex;
+  flex-direction: column;
+  background-color: var(--theme-blue);
+  padding: 20px;
+  border-radius: 20px;
+  gap: 8px;
+
+  h3 {
+    font-weight: 500;
+  }
+
+  label {
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+
+    app-combobox {
+      max-width: 400px;
+    }
+  }
+
+  &__products {
+    display: flex;
+    flex-direction: column;
+    row-gap: 16px;
+    margin-top: 8px;
+    margin-bottom: 8px;
+
+    > h3:last-of-type {
+      margin-left: auto;
+    }
+
+    &__item {
+      display: flex;
+      align-items: center;
+      gap: 16px;
+      border-bottom: 1px solid var(--theme-dark-blue);
+      padding-bottom: 16px;
+
+      &:first-of-type {
+        border-top: 1px solid var(--theme-dark-blue);
+        padding-top: 16px;
+      }
+
+      &_info {
+        display: flex;
+        flex-direction: column;
+        gap: 8px;
+        width: 100%;
+
+        &-description {
+          display: flex;
+          justify-content: space-between;
+          gap: 8px;
+        }
+      }
+    }
+  }
 }
