--- a/src/app/shared/components/product-card/product-card.component.html
+++ b/src/app/shared/components/product-card/product-card.component.html
@@ -1,4 +1,4 @@
-<img class="product-image" src="{{ product.imageUrl }}" alt="">
+<div class="product-image" style="background-image: url({{ product.imageUrl }})"></div>
 <h2 class="product-name">{{ product.name }}</h2>
 <div class="bottom-group">
   <span class="product-price">{{ product.price }} ₽</span>
