расставил max-width, исправил отображение favourite иконки во вкладке favorite

--- a/src/app/catalog/pages/product-details-page/product-details-page.component.scss
+++ b/src/app/catalog/pages/product-details-page/product-details-page.component.scss
@@ -47,6 +47,12 @@ section {
           stroke: var(--theme-main);
           fill: none;
         }
+
+        &.active {
+          svg {
+            fill: var(--theme-light-blue);
+          }
+        }
       }
     }
   }
