--- a/src/app/dashboard/pages/order-history/order-history.component.scss
+++ b/src/app/dashboard/pages/order-history/order-history.component.scss
@@ -27,7 +27,14 @@
   }
 
   &-image {
-    max-width: 300px;
+    display: block;
+    border-radius: 20px;
+    max-width: 100%;
+    height: 160px;
+    width: 350px;
+    background-color: white;
+    background-size: cover;
+    background-position: center center;
   }
 
   &__products {
