--- a/src/app/dashboard/pages/user-orders/user-orders.component.scss
+++ b/src/app/dashboard/pages/user-orders/user-orders.component.scss
@@ -17,7 +17,14 @@
   gap: 8px;
 
   &-image {
-    max-width: 300px;
+    display: block;
+    border-radius: 20px;
+    max-width: 100%;
+    height: 160px;
+    width: 350px;
+    background-color: white;
+    background-size: cover;
+    background-position: center center;
   }
 
   h3 {
