Фикc стейта, доработал добавление в избранное, добавил subscription где не было

--- a/src/app/catalog/pages/product-details-page/product-details-page.component.scss
+++ b/src/app/catalog/pages/product-details-page/product-details-page.component.scss
@@ -40,12 +40,20 @@ section {
       gap: 12px;
 
       .favourite-btn {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        border-radius: 8px;
         background-color: var(--theme-accent-blue);
-        padding: 11px;
+        height: 43px;
+        width: 43px;
+        cursor: pointer;
+        transition: all .3s ease-in-out;
 
         svg {
-          stroke: var(--theme-main);
-          fill: none;
+          stroke: var(--theme-light-blue);
+          fill: var(--theme-accent-blue);
+          transition: all .3s ease-in-out;
         }
 
         &.active {
