--- a/src/app/catalog/pages/product-details-page/product-details-page.component.html
+++ b/src/app/catalog/pages/product-details-page/product-details-page.component.html
@@ -29,20 +29,19 @@
             <div class="product__wrapper__description__controls">
               <!--   TODO: сделать нормальную проверку   -->
               <ng-container *ngIf="route?.url | async as url">
-                <input *ngIf="url[0].path === 'create'" (click)="createProduct()" class="blue-btn" type="submit" value="Создать"/>
-              </ng-container>
-              <ng-container *ngIf="route?.url | async as url">
-                <input *ngIf="url[0].path !== 'create'" (click)="updateProduct()" class="blue-btn" type="submit" value="Обновить"/>
-              </ng-container>
-              <!--   TODO: убрать кнопки из создания  -->
-              <input class="blue-btn" type="submit" value="В корзину" (click)="addProductToCart(formGroup.value)"/>
-              <ng-container *ngIf="user$ | async as user">
-                <div class="main-btn favourite-btn"
-                     [class.active]="user.favorites.includes(formGroup.get('id')?.value)"
-                     (click)="addProductToFavourites(formGroup.value, user)"
-                >
-                  <svg width="20" height="21"><use xlink:href="assets/icons/sprite.svg#icon-favourite"></use></svg>
-                </div>
+                <input *ngIf="url[0].path === 'create'; else updateProductTemplate" (click)="createProduct()" class="blue-btn" type="submit" value="Создать"/>
+                <ng-template #updateProductTemplate>
+                  <input (click)="updateProduct()" class="blue-btn" type="submit" value="Обновить"/>
+                  <input class="blue-btn" type="submit" value="В корзину" (click)="addProductToCart(formGroup.value)"/>
+                  <ng-container *ngIf="user$ | async as user">
+                    <span class="favourite-btn"
+                          [class.active]="user.favorites.includes(formGroup.get('id')?.value)"
+                          (click)="addProductToFavourites(formGroup.value, user)"
+                    >
+                      <svg width="20" height="21"><use xlink:href="assets/icons/sprite.svg#icon-favourite"></use></svg>
+                    </span>
+                  </ng-container>
+                </ng-template>
               </ng-container>
             </div>
           </form>
@@ -53,7 +52,7 @@
           <div class="product__wrapper__description__controls">
             <input class="blue-btn" type="submit" value="В корзину" (click)="addProductToCart(formGroup.value)"/>
             <ng-container *ngIf="user$ | async as user">
-              <div class="main-btn favourite-btn"
+              <div class="favourite-btn"
                    [class.active]="user.favorites.includes(formGroup.get('id')?.value)"
                    (click)="addProductToFavourites(formGroup.value, user)"
               >
