--- a/src/app/cart/pages/cart-page/cart-page.component.scss
+++ b/src/app/cart/pages/cart-page/cart-page.component.scss
@@ -24,8 +24,14 @@
         font-weight: 500;
 
         &__image {
-          max-width: 240px;
+          display: block;
           border-radius: 20px;
+          max-width: 100%;
+          height: 160px;
+          width: 350px;
+          background-color: white;
+          background-size: cover;
+          background-position: center center;
         }
 
         &__info {
@@ -42,11 +48,17 @@
             gap: 32px;
             width: 100%;
 
+            &-price {
+              width: 80px;
+              white-space: nowrap;
+            }
+
             &_delete-button {
               display: flex;
               align-items: center;
               justify-content: center;
               cursor: pointer;
+              width: 100px;
             }
           }
         }
