--- a/src/app/dashboard/pages/user-orders/user-orders.component.html
+++ b/src/app/dashboard/pages/user-orders/user-orders.component.html
@@ -1,5 +1,17 @@
 <div class="section__wrapper">
   <h2 class="text-accent">Обработка заказов</h2>
+
+  <label>
+    <h3>Фильтрация заказов по статусу</h3>
+    <app-combobox
+      class="filter-by-status"
+      [data]="statuses"
+      [value]="selectedStatusFilter"
+      (valueChanges)="statusFilterChanged($event)"
+    >
+    </app-combobox>
+  </label>
+
   <ng-container *ngIf="formGroup.controls.userOrders.controls as orderHistory">
     <div *ngIf="orderHistory.length === 0">
       Нет заказов для обработки
