Переписал удаление продукта из коризны

--- a/src/app/catalog/pages/product-details-page/product-details-page.component.scss
+++ b/src/app/catalog/pages/product-details-page/product-details-page.component.scss
@@ -16,6 +16,8 @@ section {
 
   &__title {
     width: 33%;
+    background-color: white;
+    border-radius: 20px;
 
     img {
       display: block;
